<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_details"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase_notification_demo"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="28sp"
        />



    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email_id"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:textSize="28sp"
        android:padding="16dp"
        />

    <Button
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="350dp"
        android:text="@string/sign_out"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_surendra_patel"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        />


</LinearLayout>